--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,8 +17,8 @@ block.cyber-io-holo-wall.name=Holo Wall
 block.cyber-io-holo-wall.description=Holographic wall, powered by Plum Star Inc. It will regenerate health automatically over time.
 block.cyber-io-holo-wall-large.name=Large Holo Wall
 block.cyber-io-holo-wall-large.description=The large holographic wall, powered by Plum Star Inc. It will regenerate health automatically over time.
-block.cyber-io-anti-virus.name=Anti-Virus
-block.cyber-io-anti-virus.description=An anti-virus software
+block.cyber-io-anti-virus.name=Antivirus
+block.cyber-io-anti-virus.description=If you cannot play this game, try to close the antivirus.
 block.cyber-io-underdrive-projector.name=Underdrive Projector
 block.cyber-io-underdrive-projector.description=Slow down the surrounding machines.
 block.cyber-io-cloud.name=Cloud
