Stealth and wireless tower

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -49,6 +49,14 @@ block.cyber-io-cyberion-mixer.name=Cyberion Mixer
 block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
 block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
+block.cyber-io-stealth.name=Stealth
+block.cyber-io-stealth.description=**************************
+block.cyber-io-aqua-cyberion.name=Cyberion
+block.cyber-io-aqua-cyberion.description=~~~~~~~~~~~~~~~~~~~~~~
+block.cyber-io-wireless-tower.name=Wireless Tower
+block.cyber-io-wireless-tower.description=Powered by Plum Star Inc. literally.
+block.cyber-io-data-miner.name=Data Miner
+block.cyber-io-data-miner.description=Extract the real mineral by AI.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -61,11 +69,11 @@ unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo 
 unit.cyber-io-holo-fighter.name=Holo Fighter
 unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
 unit.cyber-io-holo-guardian.name=Holo Guardian
-unit.cyber-io-holo-guardian.description=A guardian projected by Holo Projector, but risk on its neck.
+unit.cyber-io-holo-guardian.description=A guardian for Plum Star Inc. projected by Holo Projector, but risk on its neck.
 unit.cyber-io-holo-architect.name=Holo Architect
-unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it isn't built.
+unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it wasn't built.
 unit.cyber-io-holo-supporter.name=Holo Supporter
-unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
+unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't redeem itself.
 # Bars
 bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
@@ -112,8 +120,11 @@ ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force
 welcome.cyber-io.welcome=Welcome to play Cyber IO {0}.
 welcome.cyber-io.news=News: {0}
 welcome.cyber-io.v2.title=Employment Verification
-welcome.cyber-io.v2=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\nBut you may have to be worried about the tiresome job connecting those devices.\nAnyway, good luck!
+welcome.cyber-io.v2=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
+  But you may have to be worried about the tiresome job connecting those devices.\n\
+  Anyway, good luck!
 welcome.cyber-io.v2.read=Join
 # Settings
 setting.cyber-io-connection-opacity.name=Connection Opacity
 setting.cyber-io-always-show-link.name=Always Show Connection
+setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
