Mod bundles and cyberion floor

--- a/assets/stories/en.properties
+++ b/assets/stories/en.properties
@@ -1,5 +1,5 @@
-story.cyber-io.TestStory.0.text-0=This is a test of script system.
-story.cyber-io.TestStory.0.text-1=Wow, you clicked it!
-story.cyber-io.TestStory.0.text-2=Thanks, but this is the last one.
-story.cyber-io.TestStory.0.text-3=Umm...Really no more ?
-story.cyber-io.TestStory.0.text-4=Right, you win.
+TestStory.0.text-0=This is a test of script system.
+TestStory.0.text-1=Wow, you clicked it!
+TestStory.0.text-2=Thanks, but this is the last one.
+TestStory.0.text-3=Umm...Really no more ?
+TestStory.0.text-4=Right, you win.
