--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -1,29 +1,32 @@
 #Standard
-welcome.cyber-io.welcome=Welcome to play Cyber IO {0}.
-welcome.cyber-io.news=News: {0}
+welcome=Welcome to play Cyber IO {0}.
 #v2
-welcome.cyber-io.v2.0.title=Employment Verification
-welcome.cyber-io.v2.0=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
+v2.0.title=Employment Verification
+v2.0=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
   But you may have to be worried about the tiresome job connecting those devices.\n\
   Anyway, good luck!
-welcome.cyber-io.v2.0.read=Join
+v2.0.read=Join
 #v3
-welcome.cyber-io.v3.0.title=Research Project
-welcome.cyber-io.v3.0=Good morning, newcomer! Since the former employee at your position was ceased (Ummmm...physically),\
+v3.0.title=Research Project
+v3.0=Good morning, newcomer! Since the former employee at your position was ceased (Ummmm...physically),\n\
   the Hologram Project (Holo-proj) has been suspended for a long time.\n\
   But fortunately, this project is now handed over to you, our savior. Now, go back to work!
-welcome.cyber-io.v3.0.read=Join
+v3.0.read=Go Work
 
-welcome.cyber-io.v3.1.title=The SHIP
-welcome.cyber-io.v3.1=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
+v3.1.title=The SHIP
+v3.1=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
   The best&wise choice is the SHIP, produced by Plum Star Inc.,\n powered by controlled nuclear fusion and using the latest Ouroboros OS (stability guaranteed).\n\
   Commodity code: 111_1111_11_1001\n\
   PS: ECHO consultation accepted.
-welcome.cyber-io.v3.1.read=Mark as Junk
+v3.1.read=Mark as Junk
 
-welcome.cyber-io.v3.2.title=ECHO
-welcome.cyber-io.v3.2=To deal with communication barriers among various creatures and languages on planets, ECHO was developed.\n\
+v3.2.title=ECHO
+v3.2=To deal with communication barriers among various creatures and languages on planets, ECHO was developed.\n\
   It provided a simple way, one-click to talk, to interact each others.\n\
   In addition, ECHO stores cookies on the ECHO terminals to make your experience of communication better.\n\
   Detailed information about the use of cookies on your ECHO terminal is available on [#e53935]*404 Not Found*[].
-welcome.cyber-io.v3.2.read=Accept
+v3.2.read=Accept
+
+v3.3.title=New Brains
+v3.3=New Brains Corp. is amongst the largest companies universe-wide.
+v3.3.read=Accept
