The welcome no longer has been the same as last one. Update notification now shows up when there's a new version of CyberIO on GitHub. Using kotlin coroutine(which makes jar obese)

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -120,3 +120,4 @@ ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force
 setting.cyber-io-connection-opacity.name=Connection Opacity
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
+setting.cyber-io-show-update.name=Show CyberIO Update Notification
