--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -7,6 +7,13 @@ v2-0=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernet
   Anyway, good luck!
 v2-0.read=Join
 #v3
+v3.update.title=Update ECHO
+v3.update=News: Recently, the ECHO has published a new version {0}.\n\
+  You can click the button below to update your ECHO terminal.
+v3.update.update=Update
+v3.update.no=Not Now
+v3.update.dont-show=Don't Show
+
 v3-0.title=Research Project
 v3-0=Good morning, newcomer! Since the former employee at your position was ceased (Ummmm...physically),\n\
   the Hologram Project (Holo-proj) has been suspended for a long time.\n\
