--- a/assets/stories/en.properties
+++ b/assets/stories/en.properties
@@ -1,5 +1,6 @@
-TestStory.0.text-0=This is a test of script system.
-TestStory.0.text-1=Wow, you clicked it!
-TestStory.0.text-2=Thanks, but this is the last one.
-TestStory.0.text-3=Umm...Really no more ?
-TestStory.0.text-4=Right, you win.
+# OnTheShip
+OnTheShip.Captain.Introduction.text-0=This is a test of script system.
+OnTheShip.Captain.Introduction.text-1=Wow, you clicked it!
+OnTheShip.Captain.Introduction.text-2=Thanks, but this is the last one.
+OnTheShip.Captain.Introduction.text-3=Umm...Really no more ?
+OnTheShip.Captain.Introduction.text-4 =Right, you win.
