StreamServer now can receiver stream from others. A slider bar was added for changing the density of connection arrow.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -35,8 +35,10 @@ block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
+block.cyber-io-smart-distributor.stats.power-use=Based on the number of items required.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
+block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
 block.cyber-io-stream-client.name=Stream Client
 block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
 block.cyber-io-stream-host.name=Stream Host
@@ -102,6 +104,9 @@ bar.cyber-io.client=Client: {0}
 bar.cyber-io.host=Host: {0}
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
+bar.cyber-io.rest-resurrect=Rest Life: {0} times
+# Bundles
+cyber-io.cyberion-req=cyberion
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
@@ -118,6 +123,7 @@ ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuat
 ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
 # Settings
 setting.cyber-io-connection-opacity.name=Connection Opacity
+setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
