--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -52,13 +52,16 @@ block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but i
 block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 block.cyber-io-stealth.name=Stealth
-block.cyber-io-stealth.description=**************************
+block.cyber-io-stealth.description=******Permission Denied*******
 block.cyber-io-aqua-cyberion.name=Cyberion
-block.cyber-io-aqua-cyberion.description=~~~~~~~~~~~~~~~~~~~~~~
+block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
 block.cyber-io-wireless-tower.description=Powered by Plum Star Inc. literally.
 block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extract the real mineral by AI.
+block.cyber-io-heimdall.name=Heimdall
+block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
+block.cyber-io-heimdall.details=The artifact of New Brains Crop.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
