UpgradeComponent and Heimdall Eye

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -62,6 +62,9 @@ block.cyber-io-data-miner.description=Extract the real mineral by AI.
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
 block.cyber-io-heimdall.details=The artifact of New Brains Crop.
+block.cyber-io-heimdall-eye.name=Heimdall Eye
+block.cyber-io-heimdall-eye.description=
+block.cyber-io-heimdall-eye.details=
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
@@ -130,3 +133,6 @@ setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
+# UI
+ui.cyber-io.mouse-position.tile=Tile:{0},{1}
+ui.cyber-io.mouse-position.build=Build:{0},{1}
