Eye of Heimdall

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -62,9 +62,9 @@ block.cyber-io-data-miner.description=Extract the real mineral by AI.
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
 block.cyber-io-heimdall.details=The artifact of New Brains Crop.
-block.cyber-io-heimdall-eye.name=Heimdall Eye
-block.cyber-io-heimdall-eye.description=
-block.cyber-io-heimdall-eye.details=
+block.cyber-io-heimdall-eye.name=Eye of Heimdall
+block.cyber-io-heimdall-eye.description=A detachable component, designed for heimdall improvement, can stare at anyone that it considers as an enemy.
+block.cyber-io-heimdall-eye.details=The upgrade component developed by New Brains Crop.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
