Ear of Heimdall

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -65,6 +65,9 @@ block.cyber-io-heimdall.details=The artifact of New Brains Crop.
 block.cyber-io-heimdall-eye.name=Eye of Heimdall
 block.cyber-io-heimdall-eye.description=A detachable component, designed for heimdall improvement, can stare at anyone that it considers as an enemy.
 block.cyber-io-heimdall-eye.details=The upgrade component developed by New Brains Crop.
+block.cyber-io-heimdall-ear.name=Ear of Heimdall
+block.cyber-io-heimdall-ear.description=A sonic sensor, designed for heimdall upgrade, can detect the vibration of enemy and realize the sonic wave by mind power.
+block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brains Crop.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
