--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -139,3 +139,4 @@ setting.cyber-io-show-update.name=Show CyberIO Update Notification
 # UI
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
+ui.cyber-io.mouse-position.world=World:{0},{1}
