More details of Heimdall and its upgrade components shows up in the stats.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -116,6 +116,12 @@ bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
 # Bundles
 cyber-io.cyberion-req=cyberion
+cyber-io.cost.second=s
+cyber-io.cost.minute=min
+cyber-io.percent.plus=+{0}%
+cyber-io.percent.minus=-{0}%
+cyber-io.value.plus=+{0}
+cyber-io.value.minus=-{0}
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
@@ -140,3 +146,16 @@ setting.cyber-io-show-update.name=Show CyberIO Update Notification
 ui.cyber-io.mouse-position.tile=Tile:{0},{1}
 ui.cyber-io.mouse-position.build=Build:{0},{1}
 ui.cyber-io.mouse-position.world=World:{0},{1}
+# Heimdall
+heimdall.damage.name=Damage
+heimdall.range.name=Range
+heimdall.wave-speed.name=Wave Speed
+heimdall.wave-width.name=Wave Width
+heimdall.reload-time.name=Reload
+heimdall.max-brain-wave-num.name=Wave Number
+heimdall.control-line.name=Control
+heimdall.force-field-max.name=Shield
+heimdall.force-field-regen.name=Shield Regeneration
+heimdall.force-field-radius.name=Shield Range
+heimdall.force-field-restore-time.name=Shield Reload
+
