--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -57,8 +57,9 @@ block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
 block.cyber-io-wireless-tower.description=Powered by Plum Star Inc. literally.
+block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
-block.cyber-io-data-miner.description=Extract the real mineral by AI.
+block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
 block.cyber-io-heimdall.details=The artifact of New Brains Crop.
@@ -116,12 +117,13 @@ bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
 # Bundles
 cyber-io.cyberion-req=cyberion
-cyber-io.cost.second=s
+cyber-io.cost.second=sec
 cyber-io.cost.minute=min
 cyber-io.percent.plus=+{0}%
 cyber-io.percent.minus=-{0}%
 cyber-io.value.plus=+{0}
 cyber-io.value.minus=-{0}
+cyber-io.adjustable-overdrive.speed-increase=+{0}% to +{1}%
 # Controls
 control.cyber-io.yes=Yes
 control.cyber-io.no=No
