Prepared to v3.1. Chinese support added(almost idk) thanks to @woodjecket.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -141,6 +141,8 @@ ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force
 # Settings
 setting.cyber-io-connection-opacity.name=Connection Opacity
 setting.cyber-io-connection-density.name=Connection Density
+setting.cyber-io-connection-size.name=Connection Arrow Size
+setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
