--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -1,40 +1,47 @@
-#Standard
+# Standard
 welcome=Welcome to play Cyber IO {0}.
+Discord.title=Discord
+Discord=Sometimes, roaming in the space alone, you may want to seek a community \n\
+  to share your work or just hava a problem (of course, NO BUG).\n\
+  Alright, despite bad ECHO signal, there is a planet waiting for you, Plum Star on Discord.\n\
+  Now, join us to secure reputation or report anything you want.
+Discord.link=https://discord.gg/PDwyxM3waw
+Discord.yes=Open Link
+Discord.no=Mark as Junk
+UpdateECHO.title=Update ECHO
+UpdateECHO=News: Recently, the ECHO has published a new version {0}.\n\
+  You can click the button below to update your ECHO terminal.
+UpdateECHO.yes=Update
+UpdateECHO.no=Not Now
+UpdateECHO.dont-show=Don't Show
 #v2
-v2-0.title=Employment Verification
-v2-0=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
+EmploymentVerification.title=Employment Verification
+EmploymentVerification=Welcome to join us, Plum Star Inc., enjoy this new version of full cybernetic things!\n\
   But you may have to be worried about the tiresome job connecting those devices.\n\
   Anyway, good luck!
-v2-0.read=Join
+EmploymentVerification.read=Join
 #v3
-v3.update.title=Update ECHO
-v3.update=News: Recently, the ECHO has published a new version {0}.\n\
-  You can click the button below to update your ECHO terminal.
-v3.update.update=Update
-v3.update.no=Not Now
-v3.update.dont-show=Don't Show
-
-v3-0.title=Research Project
-v3-0=Good morning, newcomer! Since the former employee at your position was ceased (Ummmm...physically),\n\
+ResearchProject.title=Research Project
+ResearchProject=Good morning, newcomer! Since the former employee at your position was ceased (Ummmm...physically),\n\
   the Hologram Project (Holo-proj) has been suspended for a long time.\n\
   But fortunately, this project is now handed over to you, our savior. Now, go back to work!
-v3-0.read=Go Work
+ResearchProject.read=Go Work
 
-v3-1.title=The SHIP
-v3-1=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
+TheSHIP.title=The SHIP
+TheSHIP=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
   The best&wise choice is the SHIP, produced by Plum Star Inc.,\n powered by controlled nuclear fusion and using the latest Ouroboros OS (stability guaranteed).\n\
   Commodity code: 111_1111_11_1001\n\
   PS: ECHO consultation accepted.
-v3-1.read=Mark as Junk
+TheSHIP.read=Mark as Junk
 
-v3-2.title=ECHO
-v3-2=To deal with communication barriers among various creatures and languages on planets, ECHO was developed.\n\
+ECHO.title=ECHO
+ECHO=To deal with communication barriers among various creatures and languages on planets, ECHO was developed.\n\
   It provided a simple way, one-click to talk, to interact each others.\n\
   In addition, ECHO stores cookies on the ECHO terminals to make your experience of communication better.\n\
   Detailed information about the use of cookies on your ECHO terminal is available on [#e53935]*404 Not Found*[].
-v3-2.read=Accept
+ECHO.read=Accept
 
-v3-3.title=New Brains
-v3-3=New Brains Corp.,which leads the biotech, medicine, neurology etc., is amongst the largest companies universe-wide.\n\
+NewBrains.title=New Brains
+NewBrains=New Brains Corp.,which leads the biotech, medicine, neurology etc., is amongst the largest companies universe-wide.\n\
   Always, as it's named, they are at the forefront of brain science.\nMost of you haven't noticed it yet, but it's also a part of their projects.
-v3-3.read=Mark as Read
+NewBrains.read=Mark as Read
